# discord-color-palette-bot

./: README.md  bot.py  color_utils.py  image_generator.py  pyproject.toml  web_server.py
templates/: error.html  palette.html
